--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-jdbc.url=${jdbc.url}
-jdbc.user=${jdbc.user}
-jdbc.password=${jdbc.password}
+jdbc.url=jdbc:mysql://localhost:3306/eshop
+jdbc.user=root
+jdbc.password=Lizak123
